# esp32-lightstrip

./: CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: conf.rs  ir.rs  led.rs  lib.rs  main.rs  smart_led_async.rs
