[package]
name = "esp32-lightstrip"
version = "0.1.0"
authors = ["Robin Mueller <robin.mueller.m@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
default-run = "esp32-lightstrip"

[dependencies]
esp-backtrace = { version = "0.14.0", features = [
    "exception-handler",
    "panic-handler",
    "defmt"
] }
esp-hal = "0.21.0"
embedded-hal = "1"
smart-leds = "0.4"
dummy-pin = "1"
critical-section = "1"
log = { version = "0.4.21" }
embassy-executor = { version = "0.6.0", features = ["task-arena-size-40960"] }
embassy-sync = "0.6.0"
embassy-time = "0.3.2"
libm = "0.2"
defmt = "0.3.8"

[dependencies.esp-println]
version = "0.12.0"
features = ["log", "defmt-espflash"]

[dependencies.esp-hal-embassy]
version = "0.4"
features = ["integrated-timers"]

[dependencies.infrared]
version = "0.14"
git = "https://github.com/jkristell/infrared.git"
branch = "embedded-hal1_0"
features = ["defmt"]

[dependencies.esp-hal-smartled]
git = "https://github.com/robamu/esp-hal-community.git"
branch = "non-blocking-smart-led"
version = "0.14"
features = ["defmt"]

[features]
default = []

bedroom = ["esp32c6"]
tree = ["esp32c3"]

esp32c6 = [
  "esp-hal/esp32c6",
  "esp-println/esp32c6",
  "esp-hal-embassy/esp32c6",
  "esp-hal-smartled/esp32c6",
  "esp-backtrace/esp32c6",
  "esp-hal/esp32c6"
]
esp32c3 = [
  "esp-hal/esp32c3",
  "esp-println/esp32c3",
  "esp-hal-embassy/esp32c3",
  "esp-hal-smartled/esp32c3",
  "esp-backtrace/esp32c3",
  "esp-hal/esp32c3",
  # "portable-atomic"
]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
