[package]
name = "esp32-lightstrip"
version = "1.1.0"
authors = ["Robin Mueller <robin.mueller.m@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
default-run = "esp32-lightstrip"

[dependencies]
esp-backtrace = { version = "0.16.0", features = [
    "exception-handler",
    "panic-handler",
    "defmt"
] }
esp-hal = { version = "1.0.0-beta.1" }
esp-hal-embassy = { version = "0.8" }
esp-bootloader-esp-idf = "0.1"
embedded-hal = "1"
smart-leds = "0.4"
dummy-pin = "1"
critical-section = "1"
log = { version = "0.4.21" }
embassy-executor = { version = "0.7", features = ["task-arena-size-40960"] }
embassy-sync = "0.6.0"
embassy-time = "0.4"
libm = "0.2"
defmt = "1"

[dependencies.esp-println]
version = "0.14.0"
features = ["defmt-espflash"]

[dependencies.infrared]
version = "0.14"
git = "https://github.com/jkristell/infrared.git"
branch = "embedded-hal1_0"
features = ["defmt"]

[dependencies.esp-hal-smartled]
version = "0.15"
features = ["defmt"]

[features]
default = ["bedroom"]

bedroom = ["esp32c6"]
tree = ["esp32c6"]

esp32c6 = [
  "esp-hal/esp32c6",
  "esp-println/esp32c6",
  "esp-hal-embassy/esp32c6",
  "esp-hal-smartled/esp32c6",
  "esp-backtrace/esp32c6",
  "esp-hal/esp32c6"
]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
